added dfp integrated training notebooks

--- a/examples/digital_fingerprinting/production/morpheus/dfp_azure_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/dfp_azure_integrated_training.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Source\n",
-    "source = \"duo\"\n",
+    "source = \"azure\"\n",
     "\n",
     "# Global options\n",
     "train_users = \"all\"\n",
@@ -126,7 +126,7 @@
     "sample_rate_s = 0\n",
     "\n",
     "# MLFLow tracking uri\n",
-    "tracking_uri = \"http://mlflow:5000\"\n",
+    "tracking_uri = \"http://localhost:8000\"\n",
     "\n",
     "# Enter any users to skip here\n",
     "skip_user: typing.List[str] = []\n",
@@ -142,10 +142,10 @@
     "\n",
     "# Control messages input files\n",
     "training_only_input_files = [\n",
-    "    \"./benchmarks/resource/control_messages/duo_payload_load_training.json\"\n",
+    "    \"./benchmarks/resource/control_messages/azure_payload_load_training.json\"\n",
     "]\n",
     "training_inference_input_files = [\n",
-    "    \"./benchmarks/resource/control_messages/duo_payload_load_train_inference.json\"\n",
+    "    \"./benchmarks/resource/control_messages/azure_payload_load_train_inference.json\"\n",
     "]"
    ]
   },
@@ -509,7 +509,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added source: <from-message-control-0; ControlMessageFileSourceStage(filenames=['./benchmarks/resource/control_messages/duo_payload_load_training.json'])>\n",
+      "Added source: <from-message-control-0; ControlMessageFileSourceStage(filenames=['./benchmarks/resource/control_messages/azure_payload_load_training.json'])>\n",
       "  └─> fsspec.OpenFiles\u001b[0m\n"
      ]
     },
@@ -564,7 +564,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DFP Training Pipeline rate[Complete]: 5534 messages [00:23, 239.50 messages/s]\n",
+      "DFP Training Pipeline rate[Complete]: 6710 messages [00:25, 261.10 messages/s]\n",
       "DFP Inference Pipeline rate[Complete]: 0 messages [00:00, ? messages/s]"
      ]
     },
@@ -687,7 +687,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added source: <from-message-control-4; ControlMessageFileSourceStage(filenames=['./benchmarks/resource/control_messages/duo_payload_load_train_inference.json'])>\n",
+      "Added source: <from-message-control-4; ControlMessageFileSourceStage(filenames=['./benchmarks/resource/control_messages/azure_payload_load_train_inference.json'])>\n",
       "  └─> fsspec.OpenFiles\u001b[0m\n"
      ]
     },
@@ -742,8 +742,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DFP Training Pipeline rate[Complete]: 5534 messages [00:25, 214.70 messages/s]\n",
-      "DFP Inference Pipeline rate[Complete]: 870 messages [00:08, 103.82 messages/s]"
+      "DFP Training Pipeline rate[Complete]: 6710 messages [00:30, 219.41 messages/s]\n",
+      "DFP Inference Pipeline rate[Complete]: 467 messages [00:13, 35.69 messages/s]\n"
      ]
     },
     {
@@ -751,13 +751,6 @@
      "output_type": "stream",
      "text": [
       "====Pipeline Complete====\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
