add onnx export section to notebooks

--- a/models/training-tuning-scripts/log-parsing-models/log-parsing-training.ipynb
+++ b/models/training-tuning-scripts/log-parsing-models/log-parsing-training.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from seqeval.metrics import classification_report,accuracy_score,f1_score\n",
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,56 +113,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>257</th>\n",
+       "      <th>4655</th>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>158.69.5.181 - - [04/Apr/2018:23:06:49 +0200] ...</td>\n",
-       "      <td>158.69.5.181</td>\n",
+       "      <td>193.106.31.130 - - [11/Aug/2019:19:54:28 +0200...</td>\n",
+       "      <td>193.106.31.130</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>1.1</td>\n",
+       "      <td>Mozilla/4.0 (compatible; MSIE 7.0; Windows NT ...</td>\n",
+       "      <td>IE</td>\n",
+       "      <td>Windows</td>\n",
+       "      <td>Vista</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>POST</td>\n",
        "      <td>/administrator/index.php</td>\n",
-       "      <td>4498</td>\n",
+       "      <td>4481</td>\n",
        "      <td>200</td>\n",
-       "      <td>[04/Apr/2018:23:06:49 +0200]</td>\n",
+       "      <td>[11/Aug/2019:19:54:28 +0200]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    error_level error_message  \\\n",
-       "257        <NA>          <NA>   \n",
+       "     error_level error_message  \\\n",
+       "4655        <NA>          <NA>   \n",
        "\n",
-       "                                                   raw   remote_host  \\\n",
-       "257  158.69.5.181 - - [04/Apr/2018:23:06:49 +0200] ...  158.69.5.181   \n",
+       "                                                    raw     remote_host  \\\n",
+       "4655  193.106.31.130 - - [11/Aug/2019:19:54:28 +0200...  193.106.31.130   \n",
        "\n",
-       "    remote_logname remote_user request_header_referer  \\\n",
-       "257              -           -                      -   \n",
+       "     remote_logname remote_user request_header_referer  \\\n",
+       "4655              -           -                      -   \n",
        "\n",
-       "    request_header_user_agent request_header_user_agent__browser__family  \\\n",
-       "257                         -                                      Other   \n",
+       "                              request_header_user_agent  \\\n",
+       "4655  Mozilla/4.0 (compatible; MSIE 7.0; Windows NT ...   \n",
        "\n",
-       "    request_header_user_agent__os__family  \\\n",
-       "257                                 Other   \n",
+       "     request_header_user_agent__browser__family  \\\n",
+       "4655                                         IE   \n",
        "\n",
-       "    request_header_user_agent__os__version_string  request_http_ver  \\\n",
-       "257                                          <NA>               1.1   \n",
+       "     request_header_user_agent__os__family  \\\n",
+       "4655                               Windows   \n",
        "\n",
-       "    request_method               request_url response_bytes_clf status  \\\n",
-       "257           POST  /administrator/index.php               4498    200   \n",
+       "     request_header_user_agent__os__version_string  request_http_ver  \\\n",
+       "4655                                         Vista               1.0   \n",
        "\n",
-       "                    time_received  \n",
-       "257  [04/Apr/2018:23:06:49 +0200]  "
+       "     request_method               request_url response_bytes_clf status  \\\n",
+       "4655           POST  /administrator/index.php               4481    200   \n",
+       "\n",
+       "                     time_received  \n",
+       "4655  [11/Aug/2019:19:54:28 +0200]  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/rapids/lib/python3.8/site-packages/cudf/core/subword_tokenizer.py:187: UserWarning: When truncation is not True, the behaviour currently differs from HuggingFace as cudf always returns overflowing tokens\n",
-      "  warn(warning_msg)\n"
+      "/opt/conda/envs/morpheus/lib/python3.8/site-packages/cudf/core/subword_tokenizer.py:189: UserWarning: When truncation is not True, the behavior currently differs from HuggingFace as cudf always returns overflowing tokens\n",
+      "  warnings.warn(warning_msg)\n"
      ]
     }
    ],
@@ -349,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,17 +461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForTokenClassification: ['cls.seq_relationship.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForTokenClassification: ['cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight']\n",
       "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -491,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,37 +520,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 1/2 [00:35<00:35, 35.41s/it]"
+      "Epoch:  50%|█████     | 1/2 [00:38<00:38, 38.73s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.18636336472931586\n"
+      "Train loss: 0.2076284834630277\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 2/2 [01:10<00:00, 35.27s/it]"
+      "Epoch: 100%|██████████| 2/2 [01:17<00:00, 38.85s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.0059268270875965185\n",
-      "CPU times: user 44.8 s, sys: 25.7 s, total: 1min 10s\n",
-      "Wall time: 1min 10s\n"
+      "Train loss: 0.008250679652531925\n",
+      "CPU times: user 1min 16s, sys: 896 ms, total: 1min 17s\n",
+      "Wall time: 1min 17s\n"
      ]
     },
     {
@@ -596,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,33 +611,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/morpheus/lib/python3.8/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: [PAD] seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f1 score: 0.998655\n",
-      "Accuracy score: 0.999771\n",
+      "f1 score: 0.997863\n",
+      "Accuracy score: 0.999263\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/morpheus/lib/python3.8/site-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/conda/envs/morpheus/lib/python3.8/site-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                                               precision    recall  f1-score   support\n",
       "\n",
-      "                                  error_level      1.000     1.000     1.000       100\n",
-      "                                error_message      1.000     1.000     1.000       100\n",
-      "                                  remote_host      1.000     1.000     1.000       913\n",
-      "                       request_header_referer      1.000     1.000     1.000       508\n",
-      "                    request_header_user_agent      1.000     1.000     1.000      1002\n",
-      "request_header_user_agent__os__version_string      0.875     1.000     0.933        14\n",
-      "                             request_http_ver      1.000     1.000     1.000       913\n",
-      "                               request_method      1.000     1.000     1.000       913\n",
-      "                                  request_url      0.997     0.981     0.989       913\n",
-      "                           response_bytes_clf      1.000     1.000     1.000       911\n",
-      "                                       status      1.000     1.000     1.000       912\n",
-      "                                time_received      1.000     1.000     1.000       985\n",
+      "                                         PAD]      0.000     0.000     0.000         0\n",
+      "                                  error_level      1.000     1.000     1.000        90\n",
+      "                                error_message      1.000     1.000     1.000        90\n",
+      "                                  remote_host      1.000     1.000     1.000       890\n",
+      "                       request_header_referer      1.000     0.996     0.998       476\n",
+      "                    request_header_user_agent      1.000     1.000     1.000      1005\n",
+      "request_header_user_agent__os__version_string      0.000     0.000     0.000        19\n",
+      "                             request_http_ver      1.000     1.000     1.000       890\n",
+      "                               request_method      1.000     1.000     1.000       890\n",
+      "                                  request_url      1.000     0.990     0.995       890\n",
+      "                           response_bytes_clf      1.000     1.000     1.000       888\n",
+      "                                       status      1.000     1.000     1.000       888\n",
+      "                                time_received      0.998     1.000     0.999       952\n",
       "\n",
-      "                                    micro avg      0.999     0.998     0.999      8184\n",
-      "                                    macro avg      0.989     0.998     0.994      8184\n",
-      "                                 weighted avg      0.999     0.998     0.999      8184\n",
+      "                                    micro avg      0.999     0.996     0.998      7968\n",
+      "                                    macro avg      0.846     0.845     0.846      7968\n",
+      "                                 weighted avg      0.997     0.996     0.997      7968\n",
       "\n"
      ]
     }
@@ -700,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,6 +742,65 @@
     "    model.config.id2label = id2label\n",
     "    model.config.label2id = label2id\n",
     "    model.save_pretrained('log_parsing_apache_morpheus')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export model to ONNX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tokenizer_output = tokenizer(logs_df[\"raw_preprocess\"][0:3],\n",
+    "          max_length=MAX_SEQ_LEN,\n",
+    "          stride = STRIDE,\n",
+    "          truncation=False,\n",
+    "          max_num_rows = 3,\n",
+    "          add_special_tokens=False,\n",
+    "          return_tensors='pt'\n",
+    "     )\n",
+    "sample_input_ids = tokenizer_output['input_ids'].type(torch.long)\n",
+    "sample_attention_masks = tokenizer_output['attention_mask'].type(torch.long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sample_model_input = (sample_input_ids, sample_attention_masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "torch.onnx.export(model,              \n",
+    "                  sample_model_input,               \n",
+    "                  \"model.onnx\",                                      # where to save the model\n",
+    "                  export_params=True,                                # store the trained parameter weights inside the model file\n",
+    "                  opset_version=10,                                  # the ONNX version to export the model to\n",
+    "                  do_constant_folding=True,                          # whether to execute constant folding for optimization\n",
+    "                  input_names = ['input_ids','attention_mask'],      # the model's input names\n",
+    "                  output_names = ['output'],                         # the model's output names\n",
+    "                  dynamic_axes={'input_ids' : {0 : 'batch_size'},    # variable length axes\n",
+    "                                'attention_mask': {0: 'batch_size'}, \n",
+    "                                'output' : {0 : 'batch_size'}})"
    ]
   },
   {
@@ -733,18 +822,11 @@
     "\n",
     "https://medium.com/rapids-ai/cybert-28b35a4c81c4"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -758,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
