--- a/models/training-tuning-scripts/root-cause-models/root-cause-bert.ipynb
+++ b/models/training-tuning-scripts/root-cause-models/root-cause-bert.ipynb
@@ -64,8 +64,9 @@
    },
    "outputs": [],
    "source": [
-    "import cudf;\n",
-    "from binary_sequence_classifier import BinarySequenceClassifier;\n",
+    "import cudf\n",
+    "from cudf.core.subword_tokenizer import SubwordTokenizer\n",
+    "from binary_sequence_classifier import BinarySequenceClassifier\n",
     "from os import path;\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import f1_score\n",
@@ -88,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "random_seed=42"
@@ -100,7 +103,8 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "_UkeC7SG2krJ"
+    "id": "_UkeC7SG2krJ",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -187,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#X_train.to_csv(\"Rootcause-training-data.csv\",index=False)"
@@ -217,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test.to_json(\"Rootcause-validation-data.jsonlines\",orient='records',lines=True)"
+    "X_test.to_json(\"Rootcause-validation-data.jsonlines\", orient='records',lines=True)"
    ]
   },
   {
@@ -264,10 +270,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -307,14 +313,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 1/1 [00:08<00:00,  8.64s/it]"
+      "Epoch: 100%|██████████| 1/1 [00:09<00:00,  9.12s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.6523606370795857\n"
+      "Train loss: 0.5870807089588859\n"
      ]
     },
     {
@@ -370,7 +376,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9601666666666666"
+       "0.95"
       ]
      },
      "execution_count": 21,
@@ -423,7 +429,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9765765765765766"
+       "0.9591474245115452"
       ]
      },
      "execution_count": 24,
@@ -457,8 +463,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[189,  13],\n",
-       "       [  0, 271]])"
+       "array([[180,  22],\n",
+       "       [  1, 270]])"
       ]
      },
      "execution_count": 25,
@@ -487,28 +493,29 @@
     {
      "data": {
       "text/plain": [
-       "(array([  0,   1,   7,   9,  11,  12,  13,  14,  16,  18,  19,  20,  22,\n",
-       "         23,  24,  25,  29,  31,  34,  42,  44,  45,  46,  47,  49,  50,\n",
-       "         51,  52,  53,  55,  56,  57,  58,  59,  61,  62,  63,  64,  65,\n",
-       "         66,  67,  68,  69,  70,  71,  73,  74,  75,  80,  81,  82,  85,\n",
-       "         86,  88,  89,  90,  92,  93,  94,  95,  97,  98,  99, 101, 103,\n",
-       "        104, 105, 106, 107, 109, 110, 112, 113, 114, 115, 117, 119, 120,\n",
-       "        123, 124, 125, 126, 128, 129, 130, 131, 134, 136, 137, 138, 139,\n",
-       "        140, 141, 142, 143, 144, 145, 146, 148, 149, 150, 153, 154, 156,\n",
-       "        159, 160, 161, 162, 163, 164, 165, 166, 170, 172, 173, 174, 175,\n",
-       "        176, 178, 181, 182, 183, 187, 188, 191, 194, 196, 200, 201, 202,\n",
-       "        205, 206, 207, 209, 210, 214, 215, 216, 217, 218, 221, 222, 223,\n",
-       "        224, 226, 227, 228, 229, 231, 234, 235, 236, 237, 240, 244, 245,\n",
-       "        246, 250, 251, 254, 255, 256, 257, 262, 265, 266, 267, 268, 269,\n",
-       "        271, 274, 275, 276, 278, 284, 285, 287, 289, 290, 291, 292, 293,\n",
-       "        294, 295, 296, 299, 300, 301, 302, 303, 304, 309, 311, 312, 315,\n",
-       "        316, 317, 318, 319, 321, 322, 323, 328, 329, 330, 331, 332, 334,\n",
-       "        335, 340, 343, 347, 349, 350, 351, 352, 353, 354, 355, 356, 357,\n",
-       "        358, 361, 363, 365, 367, 369, 373, 374, 375, 378, 379, 380, 381,\n",
-       "        382, 383, 384, 385, 386, 388, 389, 390, 392, 394, 395, 396, 397,\n",
-       "        398, 399, 400, 401, 402, 404, 406, 407, 408, 409, 410, 411, 412,\n",
-       "        414, 415, 416, 418, 419, 420, 421, 425, 426, 429, 432, 434, 435,\n",
-       "        436, 437, 438, 441, 442, 443, 444, 450, 453, 460, 471]),)"
+       "(array([  0,   1,   2,   7,   9,  11,  12,  13,  14,  16,  18,  19,  20,\n",
+       "         22,  23,  24,  25,  29,  31,  34,  42,  43,  44,  45,  46,  47,\n",
+       "         49,  50,  51,  52,  53,  55,  56,  57,  58,  59,  61,  62,  63,\n",
+       "         64,  65,  66,  67,  68,  69,  70,  71,  73,  74,  80,  81,  82,\n",
+       "         85,  86,  88,  89,  90,  92,  93,  94,  95,  97,  98,  99, 101,\n",
+       "        103, 104, 105, 106, 107, 109, 110, 112, 113, 114, 115, 117, 119,\n",
+       "        120, 123, 124, 125, 126, 127, 128, 129, 130, 131, 134, 136, 137,\n",
+       "        138, 139, 140, 141, 142, 143, 144, 145, 146, 148, 149, 150, 153,\n",
+       "        154, 155, 156, 159, 160, 161, 162, 163, 164, 165, 166, 170, 171,\n",
+       "        172, 173, 174, 175, 176, 178, 181, 182, 183, 187, 188, 191, 194,\n",
+       "        196, 200, 201, 202, 205, 206, 207, 209, 210, 214, 215, 216, 217,\n",
+       "        218, 221, 222, 223, 224, 226, 227, 228, 229, 231, 234, 235, 236,\n",
+       "        237, 238, 240, 244, 245, 246, 250, 251, 254, 255, 256, 257, 262,\n",
+       "        263, 265, 266, 267, 268, 269, 271, 274, 275, 276, 278, 279, 284,\n",
+       "        285, 287, 289, 290, 291, 292, 293, 294, 295, 296, 297, 299, 300,\n",
+       "        301, 302, 303, 304, 309, 311, 312, 315, 316, 317, 318, 319, 321,\n",
+       "        322, 323, 328, 329, 330, 331, 332, 334, 340, 343, 344, 347, 349,\n",
+       "        350, 351, 352, 353, 354, 355, 356, 357, 358, 361, 363, 365, 367,\n",
+       "        369, 372, 373, 374, 375, 378, 379, 380, 381, 382, 383, 384, 385,\n",
+       "        386, 388, 389, 390, 392, 394, 395, 396, 397, 398, 399, 400, 401,\n",
+       "        402, 404, 406, 407, 408, 409, 410, 411, 412, 414, 415, 416, 418,\n",
+       "        419, 420, 421, 425, 426, 429, 432, 434, 435, 436, 437, 438, 441,\n",
+       "        442, 443, 444, 450, 452, 453]),)"
       ]
      },
      "execution_count": 27,
@@ -518,6 +525,57 @@
    ],
    "source": [
     "(np.where(testpredseries == 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export model to ONNX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = SubwordTokenizer(\"./resources/bert-base-uncased-hash.txt\", do_lower_case=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer_output = tokenizer(dflogs[\"log\"][0:3],\n",
+    "                                max_length=128,\n",
+    "                                max_num_rows=3,\n",
+    "                                truncation=True,\n",
+    "                                add_special_tokens=True,\n",
+    "                                return_tensors=\"pt\")\n",
+    "\n",
+    "sample_model_input = (tokenizer_output[\"input_ids\"], tokenizer_output[\"attention_mask\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.onnx.export(seq_classifier._model.module,              \n",
+    "                  sample_model_input,               \n",
+    "                  \"model.onnx\",                                      # where to save the model\n",
+    "                  export_params=True,                                # store the trained parameter weights inside the model file\n",
+    "                  opset_version=10,                                  # the ONNX version to export the model to\n",
+    "                  do_constant_folding=True,                          # whether to execute constant folding for optimization\n",
+    "                  input_names = ['input_ids','attention_mask'],      # the model's input names\n",
+    "                  output_names = ['output'],                         # the model's output names\n",
+    "                  dynamic_axes={'input_ids' : {0 : 'batch_size'},    # variable length axes\n",
+    "                                'attention_mask': {0: 'batch_size'}, \n",
+    "                                'output' : {0 : 'batch_size'}})"
    ]
   },
   {
@@ -567,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
