updates to dfp integrated pipeline

--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_training.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6c1cb50-74f2-445d-b865-8c22c3b3798b",
    "metadata": {},
    "outputs": [],
@@ -28,19 +28,34 @@
     "# Ensure that the morpheus directory is in the python path. This may not need to be run depending on the environment setup\n",
     "import sys\n",
     "import os\n",
-    "sys.path.insert(0, os.path.abspath(\"./morpheus\"))"
+    "sys.path.insert(0, os.path.abspath(\"../../morpheus\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "102ce011-3ca3-4f96-a72d-de28fad32003",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>table {align:left;display:block}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import functools\n",
     "import logging\n",
     "import os\n",
+    "import mlflow\n",
     "import typing\n",
     "from datetime import datetime\n",
     "from functools import partial\n",
@@ -104,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9ee00703-75c5-46fc-890c-86733da906c4",
    "metadata": {},
    "outputs": [],
@@ -120,7 +135,7 @@
     "\n",
     "# Input files to read from\n",
     "input_files = [\n",
-    "    \"/workspace/examples/data/dfp/azure-training-data/AZUREAD_2022-08-0*.json\"\n",
+    "    \"../../../../data/dfp/azure-training-data/AZUREAD_2022-08-0*.json\"\n",
     "]\n",
     "\n",
     "# The format to use for models\n",
@@ -137,7 +152,30 @@
     "include_individual = train_users != \"generic\"\n",
     "\n",
     "# None indicates we arent training anything\n",
-    "is_training = train_users != \"none\""
+    "is_training = train_users != \"none\"\n",
+    "\n",
+    "# Tracking URI\n",
+    "tracking_uri = \"http://mlflow:5000\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "61fd858e",
+   "metadata": {},
+   "source": [
+    "### Set MLFlow Tracking URI\n",
+    "Set MLFlow tracking URI to make inference calls."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "30c80a17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlflow.set_tracking_uri(tracking_uri)"
    ]
   },
   {
@@ -161,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "01abd537-9162-49dc-8e83-d9465592f1d5",
    "metadata": {},
    "outputs": [],
@@ -186,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a73a4d53-32b6-4ab8-a5d7-c0104b31c69b",
    "metadata": {},
    "outputs": [],
@@ -218,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f7a0cb0a-e65a-444a-a06c-a4525d543790",
    "metadata": {},
    "outputs": [],
@@ -346,10 +384,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "825390ad-ce64-4949-b324-33039ffdf264",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====Registering Pipeline====\u001b[0m\n",
+      "====Building Pipeline====\u001b[0m\n",
+      "====Building Pipeline Complete!====\u001b[0m\n",
+      "\u001b[2mStarting! Time: 1682749542.2090456\u001b[0m\n",
+      "====Registering Pipeline Complete!====\u001b[0m\n",
+      "====Starting Pipeline====\u001b[0m\n",
+      "====Building Segment: linear_segment_0====\u001b[0m\n",
+      "Added source: <from-multi-file-0; MultiFileSource(filenames=['../../../../data/dfp/azure-training-data/AZUREAD_2022-08-0*.json'])>\n",
+      "  └─> fsspec.OpenFiles\u001b[0m\n",
+      "Added stage: <dfp-file-batcher-1; DFPFileBatcherStage(date_conversion_func=functools.partial(<function date_extractor at 0x7f8b08d7d1f0>, filename_regex=re.compile('(?P<year>\\\\d{4})-(?P<month>\\\\d{1,2})-(?P<day>\\\\d{1,2})T(?P<hour>\\\\d{1,2})(:|_)(?P<minute>\\\\d{1,2})(:|_)(?P<second>\\\\d{1,2})(?P<microsecond>\\\\.\\\\d{1,6})?Z')), period=D, sampling_rate_s=0, start_time=None, end_time=None)>\n",
+      "  └─ fsspec.OpenFiles -> List[fsspec.core.OpenFiles]\u001b[0m\n",
+      "Added source: <dfp-s3-to-df-2; DFPFileToDataFrameStage(schema=DataFrameInputSchema(json_columns=['properties'], column_info=[DateTimeColumn(name='timestamp', dtype=<class 'datetime.datetime'>, input_name='time'), RenameColumn(name='username', dtype=<class 'str'>, input_name='properties.userPrincipalName'), RenameColumn(name='appDisplayName', dtype=<class 'str'>, input_name='properties.appDisplayName'), ColumnInfo(name='category', dtype=<class 'str'>), RenameColumn(name='clientAppUsed', dtype=<class 'str'>, input_name='properties.clientAppUsed'), RenameColumn(name='deviceDetailbrowser', dtype=<class 'str'>, input_name='properties.deviceDetail.browser'), RenameColumn(name='deviceDetaildisplayName', dtype=<class 'str'>, input_name='properties.deviceDetail.displayName'), RenameColumn(name='deviceDetailoperatingSystem', dtype=<class 'str'>, input_name='properties.deviceDetail.operatingSystem'), StringCatColumn(name='location', dtype=<class 'str'>, input_columns=['properties.location.city', 'properties.location.countryOrRegion'], sep=', '), RenameColumn(name='statusfailureReason', dtype=<class 'str'>, input_name='properties.status.failureReason')], preserve_columns=None, row_filter=None), filter_null=True, file_type=FileTypes.JSON, parser_kwargs={'lines': False, 'orient': 'records'}, cache_dir=/workspace/.cache/dfp)>\n",
+      "  └─> cudf.DataFrame\u001b[0m\n",
+      "Added stage: <dfp-s3-to-df-2; DFPFileToDataFrameStage(schema=DataFrameInputSchema(json_columns=['properties'], column_info=[DateTimeColumn(name='timestamp', dtype=<class 'datetime.datetime'>, input_name='time'), RenameColumn(name='username', dtype=<class 'str'>, input_name='properties.userPrincipalName'), RenameColumn(name='appDisplayName', dtype=<class 'str'>, input_name='properties.appDisplayName'), ColumnInfo(name='category', dtype=<class 'str'>), RenameColumn(name='clientAppUsed', dtype=<class 'str'>, input_name='properties.clientAppUsed'), RenameColumn(name='deviceDetailbrowser', dtype=<class 'str'>, input_name='properties.deviceDetail.browser'), RenameColumn(name='deviceDetaildisplayName', dtype=<class 'str'>, input_name='properties.deviceDetail.displayName'), RenameColumn(name='deviceDetailoperatingSystem', dtype=<class 'str'>, input_name='properties.deviceDetail.operatingSystem'), StringCatColumn(name='location', dtype=<class 'str'>, input_columns=['properties.location.city', 'properties.location.countryOrRegion'], sep=', '), RenameColumn(name='statusfailureReason', dtype=<class 'str'>, input_name='properties.status.failureReason')], preserve_columns=None, row_filter=None), filter_null=True, file_type=FileTypes.JSON, parser_kwargs={'lines': False, 'orient': 'records'}, cache_dir=/workspace/.cache/dfp)>\n",
+      "  └─ List[fsspec.core.OpenFiles] -> cudf.DataFrame\u001b[0m\n",
+      "Added stage: <dfp-split-users-3; DFPSplitUsersStage(include_generic=True, include_individual=True, skip_users=[], only_users=None)>\n",
+      "  └─ cudf.DataFrame -> dfp.DFPMessageMeta\u001b[0m\n",
+      "Added stage: <dfp-rolling-window-4; DFPRollingWindowStage(min_history=300, min_increment=300, max_history=60d, cache_dir=/workspace/.cache/dfp)>\n",
+      "  └─ dfp.DFPMessageMeta -> dfp.MultiDFPMessage\u001b[0m\n",
+      "Added stage: <dfp-preproc-5; DFPPreprocessingStage(input_schema=DataFrameInputSchema(json_columns=[], column_info=[ColumnInfo(name='timestamp', dtype=<class 'datetime.datetime'>), ColumnInfo(name='username', dtype=<class 'str'>), ColumnInfo(name='appDisplayName', dtype=<class 'str'>), ColumnInfo(name='clientAppUsed', dtype=<class 'str'>), ColumnInfo(name='deviceDetailbrowser', dtype=<class 'str'>), ColumnInfo(name='deviceDetaildisplayName', dtype=<class 'str'>), ColumnInfo(name='deviceDetailoperatingSystem', dtype=<class 'str'>), ColumnInfo(name='statusfailureReason', dtype=<class 'str'>), IncrementColumn(name='logcount', dtype=<class 'int'>, input_name='timestamp', groupby_column='username', period='D'), CustomColumn(name='locincrement', dtype=<class 'int'>, process_column_fn=functools.partial(<function create_increment_col at 0x7f8b08eca940>, column_name='location')), CustomColumn(name='appincrement', dtype=<class 'int'>, process_column_fn=functools.partial(<function create_increment_col at 0x7f8b08eca940>, column_name='appDisplayName'))], preserve_columns=re.compile('(_batch_id)'), row_filter=None))>\n",
+      "  └─ dfp.MultiDFPMessage -> dfp.MultiDFPMessage\u001b[0m\n",
+      "Added stage: <dfp-training-6; DFPTraining(model_kwargs=None, epochs=30, validation_size=0.1)>\n",
+      "  └─ dfp.MultiDFPMessage -> morpheus.MultiAEMessage\u001b[0m\n",
+      "Added stage: <dfp-mlflow-model-writer-7; DFPMLFlowModelWriterStage(model_name_formatter=DFP-azure-{user_id}, experiment_name_formatter=dfp/azure/training/{reg_model_name}, databricks_permissions=None)>\n",
+      "  └─ morpheus.MultiAEMessage -> morpheus.MultiAEMessage\u001b[0m\n",
+      "====Building Segment Complete!====\u001b[0m\n",
+      "====Pipeline Started====\u001b[0m\n",
+      "\u001b[2mCreating dask cluster...\u001b[0m\n",
+      "\u001b[2mCreating dask cluster... Done. Dashboard: http://192.168.86.195:8787/status\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 88, Cache: miss, Duration: 271.41547203063965 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 88 rows from 2022-08-01 00:03:56.207532+00:00 to 2022-08-01 23:54:11.248402+00:00. Output: 20 users, rows/user min: 1, max: 88, avg: 8.80. Duration: 19.69 ms\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 110, Cache: miss, Duration: 371.8235492706299 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 110 rows from 2022-08-02 00:03:57.781586+00:00 to 2022-08-02 23:58:42.803775+00:00. Output: 19 users, rows/user min: 1, max: 110, avg: 11.58. Duration: 15.73 ms\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 97, Cache: miss, Duration: 498.2869625091553 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 97 rows from 2022-08-03 00:10:42.770060+00:00 to 2022-08-03 23:23:43.932133+00:00. Output: 16 users, rows/user min: 1, max: 97, avg: 12.12. Duration: 39.30 ms\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 126, Cache: miss, Duration: 312.2403621673584 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 126 rows from 2022-08-04 00:47:51.564611+00:00 to 2022-08-04 23:50:26.072379+00:00. Output: 21 users, rows/user min: 1, max: 126, avg: 12.00. Duration: 33.13 ms\u001b[0m\n",
+      "\u001b[2mRolling window complete for generic_user in 14.94 ms. Input: 126 rows from 2022-08-04 00:47:51.564611+00:00 to 2022-08-04 23:50:26.072379+00:00. Output: 421 rows from 2022-08-01 00:03:56.207532+00:00 to 2022-08-04 23:50:26.072379+00:00\u001b[0m\n",
+      "\u001b[2mPreprocessed 421 data for logs in 2022-08-01 00:03:56.207532+00:00 to 2022-08-04 23:50:26.072379+00:00 in 231.3823699951172 ms\u001b[0m\n",
+      "\u001b[2mTraining AE model for user: 'generic_user'...\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 109, Cache: miss, Duration: 6784.700870513916 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 109 rows from 2022-08-05 00:14:48.503160+00:00 to 2022-08-05 23:45:07.826898+00:00. Output: 16 users, rows/user min: 1, max: 109, avg: 13.62. Duration: 10.99 ms\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 107, Cache: miss, Duration: 337.3441696166992 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 107 rows from 2022-08-06 00:08:48.348649+00:00 to 2022-08-06 23:53:00.392382+00:00. Output: 17 users, rows/user min: 1, max: 107, avg: 12.59. Duration: 4.62 ms\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 107, Cache: miss, Duration: 421.039342880249 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 107 rows from 2022-08-07 00:00:23.959795+00:00 to 2022-08-07 23:56:24.809043+00:00. Output: 17 users, rows/user min: 1, max: 107, avg: 12.59. Duration: 18.25 ms\u001b[0m\n",
+      "\u001b[2mRolling window complete for generic_user in 14.22 ms. Input: 107 rows from 2022-08-07 00:00:23.959795+00:00 to 2022-08-07 23:56:24.809043+00:00. Output: 744 rows from 2022-08-01 00:03:56.207532+00:00 to 2022-08-07 23:56:24.809043+00:00\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 119, Cache: miss, Duration: 492.7496910095215 ms\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 119 rows from 2022-08-08 00:16:13.439012+00:00 to 2022-08-08 23:58:43.815912+00:00. Output: 18 users, rows/user min: 1, max: 119, avg: 13.22. Duration: 26.11 ms\u001b[0m\n",
+      "\u001b[2mPreprocessed 744 data for logs in 2022-08-01 00:03:56.207532+00:00 to 2022-08-07 23:56:24.809043+00:00 in 829.7054767608643 ms\u001b[0m\n",
+      "\u001b[2mS3 objects to DF complete. Rows: 102, Cache: miss, Duration: 632.6828002929688 ms\u001b[0m\n",
+      "\u001b[2mStopping dask cluster...\u001b[0m\n",
+      "\u001b[2mBatch split users complete. Input: 102 rows from 2022-08-09 00:23:17.790393+00:00 to 2022-08-09 23:59:49.626250+00:00. Output: 16 users, rows/user min: 2, max: 102, avg: 12.75. Duration: 3.81 ms\u001b[0m\n",
+      "\u001b[2mStopping dask cluster... Done.\u001b[0m\n",
+      "\u001b[2mTraining AE model for user: 'generic_user'... Complete.\u001b[0m\n",
+      "\u001b[2mTraining AE model for user: 'generic_user'...\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/04/29 01:25:56 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: DFP-azure-generic_user, version 545\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2mML Flow model upload complete: generic_user:DFP-azure-generic_user:545\u001b[0m\n",
+      "\u001b[2mTraining AE model for user: 'generic_user'... Complete.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/04/29 01:25:57 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: DFP-azure-generic_user, version 546\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2mML Flow model upload complete: generic_user:DFP-azure-generic_user:546\u001b[0m\n",
+      "====Pipeline Complete====\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a linear pipeline object\n",
     "pipeline = LinearPipeline(config)\n",
@@ -432,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
