updates to dfp integrated pipeline

--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_duo_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_duo_integrated_training.ipynb
@@ -378,13 +378,10 @@
     "| --- | --- | --- | :-- |\n",
     "| `filenames` | List of strings | | Any control message defination files to read into the pipeline |\n",
     "\n",
-    "### DFP Deployment Stage (`MultiPortModulesStage`)\n",
+    "### DFP Deployment Module (`MultiPortModulesStage`)\n",
     "\n",
-    "MultiPortModulesStage is used to load modules that returns more than one ouptut. This module sets up modular Digital Fingerprinting Pipeline instance. and performs integrated training as shown in the below diagram. For more information on the options passed to this module is shown [here](../../../../../docs/source/modules/examples/digital_fingerprinting/dfp_deployment.md).\n",
+    "MultiPortModulesStage is used to load modules that returns more than one ouptut. DFP deployment module sets up modular Digital Fingerprinting Pipeline  instance. and performs integrated training as shown in the below diagram. For more information on the options passed to this module is shown [here](../../../../../docs/source/modules/examples/digital_fingerprinting/dfp_deployment.md).\n",
     "\n",
-    "### Monitor Stage (`MonitorSatge`)\n",
-    "\n",
-    "Display throughput numbers at a specific point in the pipeline. Here, we have two monitor stages one for training and the other for inference.\n",
     "\n",
     "## E2E Workflow Architecture\n",
     "\n",
