updates to dfp integrated pipeline

--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_duo_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_duo_integrated_training.ipynb
@@ -383,7 +383,7 @@
     "MultiPortModulesStage is used to load modules that returns more than one ouptut. DFP deployment module sets up modular Digital Fingerprinting Pipeline  instance. and performs integrated training as shown in the below diagram. For more information on the options passed to this module is shown [here](../../../../../docs/source/modules/examples/digital_fingerprinting/dfp_deployment.md).\n",
     "\n",
     "\n",
-    "## E2E Workflow Architecture\n",
+    "## End-to-End Workflow Architecture\n",
     "\n",
     "![Integrated Training Pipeline](../image/dfp_integrated_training_file_pipeline.jpg))\n",
     "\n"
