--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
@@ -204,7 +204,7 @@
     "    use_cpp=True,\n",
     ")\n",
     "\n",
-    "# Construct the dataframe Schema which is used to normalize incoming duo logs\n",
+    "# Construct the dataframe Schema which is used to normalize incoming azure logs\n",
     "schema_builder = SchemaBuilder(config, source)\n",
     "schema: Schema = schema_builder.build_schema()"
    ]
