--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_duo_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_duo_integrated_training.ipynb
@@ -58,7 +58,11 @@
     "import cudf\n",
     "from datetime import datetime\n",
     "\n",
-    "from dfp.modules import dfp_deployment  # noqa: F401\n",
+    "# When segment modules are imported, they're added to the module registry. \n",
+    "# To avoid flake8 warnings about unused code, the noqa flag is used during import.\n",
+    "from dfp import modules  # noqa: F401\n",
+    "from morpheus import modules  # noqa: F401\n",
+    "from morpheus import loaders  # noqa: F401\n",
     "from dfp.utils.config_generator import ConfigGenerator\n",
     "from dfp.utils.config_generator import generate_ae_config\n",
     "from dfp.utils.dfp_arg_parser import DFPArgParser\n",
@@ -262,7 +266,7 @@
     "| `iso_date_regex_pattern` | string          | Regex pattern for ISO date matching | \"\\\\d{4}-\\\\d{2}-\\\\d{2}T\\\\d{2}:\\\\d{2}:\\\\d{2}\" | `<iso_date_regex_pattern>` |\n",
     "| `parser_kwargs`          | dictionary      | Additional arguments for the parser | {}                                          | `{}`                       |\n",
     "| `period`                 | string          | Time period for grouping files      | \"1d\"                                        | `D`                        |\n",
-    "| `sampling_rate_s`        | integer         | Sampling rate in seconds            | 60                                          | `60`                       |\n",
+    "| `sampling_rate_s`        | integer         | Sampling rate in seconds            | 0                                          | `None`                       |\n",
     "| `start_time`             | datetime/string | Start time of the time window       | \"2023-03-01T00:00:00\"                       | `None`                     |\n",
     "\n",
     "### `dfencoder_options`\n",
