removed extra images folder and move all images under docs

--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
@@ -389,7 +389,7 @@
     "\n",
     "## End-to-End Workflow Architecture\n",
     "\n",
-    "![Integrated Training Pipeline](../images/dfp_integrated_training_file_pipeline.jpg))\n",
+    "![Integrated Training Pipeline](../../../../../docs/source/img/dfp_integrated_training_file_pipeline.png))\n",
     "\n"
    ]
   },
