migrated multiplexer from azure-ad workflow

--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
@@ -131,7 +131,7 @@
     "sample_rate_s = 0\n",
     "\n",
     "# MLFLow tracking uri\n",
-    "tracking_uri = \"http://localhost:8000\"\n",
+    "tracking_uri = \"http://mlflow:5000\"\n",
     "\n",
     "# Enter any users to skip here\n",
     "skip_user: typing.List[str] = []\n",
