updated multiplexer module and tests

--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
@@ -72,7 +72,7 @@
     "from morpheus.config import Config\n",
     "from morpheus.pipeline.pipeline import Pipeline\n",
     "from morpheus.stages.general.monitor_stage import MonitorStage\n",
-    "from morpheus.stages.general.multiport_modules_stage import MultiPortModulesStage\n",
+    "from morpheus.stages.general.multi_port_modules_stage import MultiPortModulesStage\n",
     "from morpheus.stages.input.control_message_file_source_stage import ControlMessageFileSourceStage\n",
     "\n",
     "# Left align all tables\n",
@@ -411,9 +411,8 @@
     "    dfp_deployment_stage = pipeline.add_stage(\n",
     "        MultiPortModulesStage(config,\n",
     "                                dfp_deployment_module_config,\n",
-    "                                input_port_name=\"input\",\n",
-    "                                output_port_name_prefix=\"output\",\n",
-    "                                num_output_ports=2))\n",
+    "                                input_ports=[\"input\"],\n",
+    "                                output_ports=[\"output_0\", \"output_1\"]))\n",
     "\n",
     "    # Connect stages with edges.\n",
     "    pipeline.add_edge(source_stage, dfp_deployment_stage)\n",
