single symlink to common

--- a/models/training-tuning-scripts/root-cause-models/root_cause_bert.ipynb
+++ b/models/training-tuning-scripts/root-cause-models/root_cause_bert.ipynb
@@ -77,7 +77,7 @@
     "import sys\n",
     "\n",
     "from morpheus.utils.seed import manual_seed\n",
-    "from sequence_classifier import SequenceClassifier"
+    "from common.sequence_classifier import SequenceClassifier"
    ]
   },
   {
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
@@ -321,14 +321,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 1/1 [00:09<00:00,  9.23s/it]"
+      "Epoch: 100%|██████████| 1/1 [00:09<00:00,  9.20s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.4980158314786174\n"
+      "Train loss: 0.4259593893181194\n"
      ]
     },
     {
@@ -388,7 +388,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8645833333333334"
+       "0.9979166666666667"
       ]
      },
      "execution_count": 19,
@@ -418,7 +418,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/efajardo/miniconda3/envs/morpheus/lib/python3.10/site-packages/cudf/core/indexed_frame.py:3424: FutureWarning: The append method is deprecated and will be removed in a future version. Use cudf.concat instead.\n",
+      "/opt/conda/envs/morpheus/lib/python3.10/site-packages/cudf/core/indexed_frame.py:3424: FutureWarning: The append method is deprecated and will be removed in a future version. Use cudf.concat instead.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -456,7 +456,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8637316561844864"
+       "0.998158379373849"
       ]
      },
      "execution_count": 22,
@@ -492,8 +492,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[202,   0],\n",
-       "       [ 65, 206]])"
+       "array([[201,   1],\n",
+       "       [  0, 271]])"
       ]
      },
      "execution_count": 23,
@@ -609,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
